--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#links">Links</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolios">Portfolios</a>
           </li>
         </ul>
       </div>
@@ -224,17 +224,9 @@
       </section>
 
       <hr class="m-0" />
-      <section class="resume-section" id="links">
+      <section class="resume-section" id="portfolios">
         <div class="resume-section-content">
-          <h2 class="mb-5">Links</h2>
-          <div class="subheading mb-3">Notes</div>
-
-          <div class="social-icons">
-            <a class="social-icon" href="https://github.com/ADataAnalyst/Notes">
-              <i class="fab fa-github"></i>
-            </a>
-          </div>
-          <br />
+          <h2 class="mb-5">Portfolios</h2>
           <div class="subheading mb-3">Portfolios</div>
           <ul class="fa-ul mb-0">
             <li>
@@ -243,19 +235,19 @@
               </span>
             </li>
             <li>
-              <a class="text-primary" href="portfolios/portfolio_2">Portfolio 2</a>
+              <span class="text-primary">
+                <a href="portfolios/portfolio_2">Portfolio 2</a>
+              </span>
             </li>
             <li>
-              <span class="fa-li">
-                <i class="far fa-circle"></i>
+              <span class="text-primary">
+                <a href="portfolios/portfolio_3">Portfolio 3</a>
               </span>
-              Portfolio 3
             </li>
             <li>
-              <span class="fa-li">
-                <i class="far fa-circle"></i>
+              <span class="text-primary">
+                <a href="portfolios/portfolio_4">Portfolio 4</a>
               </span>
-              Portfolio 4
             </li>
           </ul>
         </div>
