--- a/index.html
+++ b/index.html
@@ -222,7 +222,6 @@
           </ul>
         </div>
       </section>
-
       <hr class="m-0" />
       <section class="resume-section" id="portfolios">
         <div class="resume-section-content">
@@ -231,22 +230,22 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="text-primary">
-                <a href="portfolios/portfolio_1">Portfolio 1</a>
+                <a href="portfolios/portfolio_1.html">Portfolio 1</a>
               </span>
             </li>
             <li>
               <span class="text-primary">
-                <a href="portfolios/portfolio_2">Portfolio 2</a>
+                <a href="portfolios/portfolio_2.html">Portfolio 2</a>
               </span>
             </li>
             <li>
               <span class="text-primary">
-                <a href="portfolios/portfolio_3">Portfolio 3</a>
+                <a href="portfolios/portfolio_3.html">Portfolio 3</a>
               </span>
             </li>
             <li>
               <span class="text-primary">
-                <a href="portfolios/portfolio_4">Portfolio 4</a>
+                <a href="portfolios/portfolio_4.html">Portfolio 4</a>
               </span>
             </li>
           </ul>
