--- a/index.html
+++ b/index.html
@@ -226,26 +226,20 @@
       <section class="resume-section" id="portfolios">
         <div class="resume-section-content">
           <h2 class="mb-5">Portfolios</h2>
-          <div class="subheading mb-3">Portfolios</div>
           <ul class="fa-ul mb-0">
             <li>
-              <span class="text-primary">
-                <a href="portfolios/portfolio_1.html">Portfolio 1</a>
+              <span class="fa-li">
+                <i href="portfolios/portfolio_1.html">Portfolio 1</i>
               </span>
             </li>
             <li>
-              <span class="text-primary">
-                <a href="portfolios/portfolio_2.html">Portfolio 2</a>
+              <span class="fa-li">
+                <i class="fas fa-check"></i>
               </span>
             </li>
             <li>
-              <span class="text-primary">
-                <a href="portfolios/portfolio_3.html">Portfolio 3</a>
-              </span>
-            </li>
-            <li>
-              <span class="text-primary">
-                <a href="portfolios/portfolio_4.html">Portfolio 4</a>
+              <span class="fa-li">
+                <i class="fas fa-check"></i>
               </span>
             </li>
           </ul>
