--- a/index.html
+++ b/index.html
@@ -229,17 +229,17 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
-                <i href="portfolios/portfolio_1.html">Portfolio 1</i>
+                <a href="portfolios/portfolio_1.html">Portfolio 1</a>
               </span>
             </li>
             <li>
               <span class="fa-li">
-                <i class="fas fa-check"></i>
+                <a href="portfolios/portfolio_2.html">Portfolio 2</a>
               </span>
             </li>
             <li>
               <span class="fa-li">
-                <i class="fas fa-check"></i>
+                <a href="portfolios/portfolio_3.html">Portfolio 3</a>
               </span>
             </li>
           </ul>
