--- a/index.html
+++ b/index.html
@@ -228,17 +228,17 @@
           <h2 class="mb-5">Portfolios</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <span class="fa-li">
+              <span class="text-primary">
                 <a href="portfolios/portfolio_1.html">Portfolio 1</a>
               </span>
             </li>
             <li>
-              <span class="fa-li">
+              <span class="text-primary">
                 <a href="portfolios/portfolio_2.html">Portfolio 2</a>
               </span>
             </li>
             <li>
-              <span class="fa-li">
+              <span class="text-primary">
                 <a href="portfolios/portfolio_3.html">Portfolio 3</a>
               </span>
             </li>
