--- a/index.html
+++ b/index.html
@@ -242,6 +242,11 @@
                 <a href="portfolios/portfolio_3.html">Portfolio 3</a>
               </span>
             </li>
+            <li>
+              <span class="text-primary">
+                <a href="portfolios/portfolio_4.html">Portfolio 4</a>
+              </span>
+            </li>
           </ul>
         </div>
       </section>
