--- a/index.html
+++ b/index.html
@@ -229,25 +229,25 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
-                <i class="fas fa-check"></i>
+                <i class="fas fa-external-link-alt"></i>
               </span>
               <a href="portfolios/portfolio_1.html">Portfolio 1</a>
             </li>
             <li>
               <span class="fa-li">
-                <i class="fas fa-check"></i>
+                <i class="fas fa-external-link-alt"></i>
               </span>
               <a href="portfolios/portfolio_2.html">Portfolio 2</a>
             </li>
             <li>
               <span class="fa-li">
-                <i class="fas fa-check"></i>
+                <i class="fas fa-external-link-alt"></i>
               </span>
               <a href="portfolios/portfolio_3.html">Portfolio 3</a>
             </li>
             <li>
               <span class="fa-li">
-                <i class="fas fa-check"></i>
+                <i class="fas fa-external-link-alt"></i>
               </span>
               <a href="portfolios/portfolio_4.html">Portfolio 4</a>
             </li>
