--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
               <h3 class="mb-0">Assistant</h3>
               <div class="subheading mb-3">La-Fu Co., Ltd.</div>
               <p>
-                - Operating the Google Ads. <br />
-                - Assisting business operation.
+                - Operated Google Ads. <br />
+                - Assisted business operation.
               </p>
             </div>
             <div class="flex-shrink-0">
@@ -86,8 +86,8 @@
               <h3 class="mb-0">Deputy Account Manager</h3>
               <div class="subheading mb-3">Jung-Shin Assets Management Co., Ltd.</div>
               <p>
-                - Executing process of civil lawsuit and judicial attachment. <br />
-                - Communicating with customers.
+                - Executed process of civil lawsuit and judicial attachment. <br />
+                - Communicated with customers.
               </p>
             </div>
             <div class="flex-shrink-0">
