--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
               <h3 class="mb-0">Assistant</h3>
               <div class="subheading mb-3">La-Fu Co., Ltd.</div>
               <p>
-                - Operated Google Ads. <br />
-                - Assisted business operation.
+                - Assisted business growth. <br />
+                - Created leaflets and posters for marketing campaign. <br />
+                - Operated Google Ads.
               </p>
             </div>
             <div class="flex-shrink-0">
@@ -86,8 +87,9 @@
               <h3 class="mb-0">Deputy Account Manager</h3>
               <div class="subheading mb-3">Jung-Shin Assets Management Co., Ltd.</div>
               <p>
-                - Executed process of civil lawsuit and judicial attachment. <br />
-                - Communicated with customers.
+                - Interacted with customers. <br />
+                - Collected and analysed client properties, including salary, real estate, etc. <br />
+                - Executed process of civil lawsuit and judicial attachment.
               </p>
             </div>
             <div class="flex-shrink-0">
