--- a/index.html
+++ b/index.html
@@ -233,25 +233,25 @@
               <span class="fa-li">
                 <i class="fas fa-external-link-alt"></i>
               </span>
-              <a href="portfolios/portfolio_1.html">Portfolio 1</a>
+              <a href="portfolios/portfolio_1.html" target="_blank" rel="noopener noreferrer">Portfolio 1</a>
             </li>
             <li>
               <span class="fa-li">
                 <i class="fas fa-external-link-alt"></i>
               </span>
-              <a href="portfolios/portfolio_2.html">Portfolio 2</a>
+              <a href="portfolios/portfolio_2.html" target="_blank" rel="noopener noreferrer">Portfolio 2</a>
             </li>
             <li>
               <span class="fa-li">
                 <i class="fas fa-external-link-alt"></i>
               </span>
-              <a href="portfolios/portfolio_3.html">Portfolio 3</a>
+              <a href="portfolios/portfolio_3.html" target="_blank" rel="noopener noreferrer">Portfolio 3</a>
             </li>
             <li>
               <span class="fa-li">
                 <i class="fas fa-external-link-alt"></i>
               </span>
-              <a href="portfolios/portfolio_4.html">Portfolio 4</a>
+              <a href="portfolios/portfolio_4.html" target="_blank" rel="noopener noreferrer">Portfolio 4</a>
             </li>
           </ul>
         </div>
