--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           </p>
           <div class="social-icons">
-            <a class="social-icon" href="https://github.com/ADataAnalyst/Notes">
+            <a class="social-icon" href="https://github.com/ADataAnalyst/Notes" target="_blank" rel="noopener noreferrer">
               <i class="fab fa-github"></i>
             </a>
           </div>
