--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
             <li class="list-inline-item">
               <i class="fab fa-markdown"></i>
             </li>
+            <li class="list-inline-item">
+              <i class="fab fa-docker"></i>
+            </li>
           </ul>
           <br />
           <div class="subheading mb-3">Marketing</div>
