--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
+              STP Analysis
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
               Persona
             </li>
             <li>
