--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
           </li>
           <li class="nav-item">
@@ -204,6 +207,20 @@
               Affinity Photo
             </li>
           </ul>
+        </div>
+      </section>
+      <hr class="m-0" />
+      <section class="resume-section" id="interests">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Interests</h2>
+          <p>Besides data analysis and marketing, I’m also prone to enjoying music, fashion and tech.</p>
+          <p class="mb-0">I’m a keen explorer of different types of music and have over 300 albums in eclectic genres. Fashion is a source of creative inspiration for me and I’m fascinated with how design shapes self expression. I’m also deeply interested in tech hardware and how it informs a significant part of our identity.</p>
+          
+          <p>
+            Besides data analysis and marketing, I’m also prone to enjoying music, fashion and tech. <br />
+            I’m a keen explorer of different types of music and have over 300 albums in eclectic genres. Fashion is a source of creative inspiration for me and I’m fascinated with how design shapes self expression. I’m also deeply interested in tech hardware and how it informs a significant part of our identity.
+          </p>
+          
         </div>
       </section>
       <hr class="m-0" />
