--- a/index.html
+++ b/index.html
@@ -206,6 +206,12 @@
               </span>
               Affinity Photo
             </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Affinity Publisher
+            </li>
           </ul>
         </div>
       </section>
