--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Associate of Applied Foreign Languages</h3>
               <div class="subheading mb-3">Kao-Yuan University</div>
-              <p>- English & Business</p>
+              <p>English & Business</p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">September 2000 - June 2003</span>
@@ -119,7 +119,7 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Electronic Engineering</h3>
               <div class="subheading mb-3">Kao-Yuan Vocational High School</div>
-              <p>- Electronics & Computer Science</p>
+              <p>Electronics & Computer Science</p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">September 1997 - June 1999</span>
@@ -129,7 +129,7 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Data Processing</h3>
               <div class="subheading mb-3">Hai-Cing Vocational High School</div>
-              <p>- Statistics & Computer Operation</p>
+              <p>Statistics & Computer Operation</p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">September 1996 - June 1997</span>
@@ -248,7 +248,7 @@
                 <i class="fas fa-check"></i>
               </span>
               University of Arts London <br />
-              - course programme in Fashion Business
+              course programme in Fashion Business
             </li>
           </ul>
         </div>
