--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <h3 class="mb-0">Deputy Account Manager</h3>
               <div class="subheading mb-3">Jung-Shin Assets Management Co., Ltd.</div>
               <p>
-                • Interacted with customers. <br />
+                • Cold call and interacted with clients. <br />
                 • Collected and analysed client properties, including salary, real estate, etc. <br />
                 • Executed process of civil lawsuit and judicial attachment.
               </p>
