--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
             I<span class="text-primary">'</span>m
           </h1>
           <div class="subheading mb-5">
-            <span class="text-primary">A</span>n Enthusiast About <br />
-            <span class="text-primary">B</span>ehavioral Economics <br />
-            <span class="text-primary">C</span>ustomer Experience <br />
-            <span class="text-primary">D</span>ata-Driven Marketing
+            An Enthusiast About <br />
+            Data-Driven Marketing
           </div>
           <p class="lead mb-5">
             
