--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Affinity Designer
+              Affinity Designer (compatible with Adobe Illustrator)
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Affinity Photo
+              Affinity Photo (compatible with Adobe Photoshop)
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Affinity Publisher
+              Affinity Publisher (compatible with Adobe InDesign)
             </li>
           </ul>
         </div>
