--- a/index.html
+++ b/index.html
@@ -196,19 +196,22 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Affinity Designer (compatible with Adobe Illustrator)
+              Affinity Designer <br />
+              (compatible with Adobe Illustrator)
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Affinity Photo (compatible with Adobe Photoshop)
+              Affinity Photo <br />
+              (compatible with Adobe Photoshop)
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Affinity Publisher (compatible with Adobe InDesign)
+              Affinity Publisher <br />
+              (compatible with Adobe InDesign)
             </li>
           </ul>
         </div>
