--- a/index.html
+++ b/index.html
@@ -263,25 +263,19 @@
               <span class="fa-li">
                 <i class="fas fa-external-link-alt"></i>
               </span>
-              <a href="portfolios/portfolio_1.html" target="_blank" rel="noopener noreferrer">Portfolio 1</a>
+              <a href="portfolios/data_analysis_1.html" target="_blank" rel="noopener noreferrer">Data Analysis 1</a>
             </li>
             <li>
               <span class="fa-li">
                 <i class="fas fa-external-link-alt"></i>
               </span>
-              <a href="portfolios/portfolio_2.html" target="_blank" rel="noopener noreferrer">Portfolio 2</a>
+              <a href="portfolios/data_analysis_2.html" target="_blank" rel="noopener noreferrer">Data Analysis 2</a>
             </li>
             <li>
               <span class="fa-li">
                 <i class="fas fa-external-link-alt"></i>
               </span>
-              <a href="portfolios/portfolio_3.html" target="_blank" rel="noopener noreferrer">Portfolio 3</a>
-            </li>
-            <li>
-              <span class="fa-li">
-                <i class="fas fa-external-link-alt"></i>
-              </span>
-              <a href="portfolios/portfolio_4.html" target="_blank" rel="noopener noreferrer">Portfolio 4</a>
+              <a href="portfolios/data_analysis_3.html" target="_blank" rel="noopener noreferrer">Data Analysis 3</a>
             </li>
           </ul>
         </div>
