--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              STP Analysis
+              Emotional Branding
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Persona
+              Behavioral Economics
             </li>
             <li>
               <span class="fa-li">
@@ -179,13 +179,8 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Emotional Branding
-            </li>
-            <li>
-              <span class="fa-li">
-                <i class="far fa-circle"></i>
-              </span>
-              Behavioral Economics
+              Search Engine Marketing <br />
+              (SEM)
             </li>
           </ul>
           <br />
