--- a/index.html
+++ b/index.html
@@ -185,28 +185,28 @@
           </ul>
           <br />
           <br />
-          <div class="subheading mb-3">Graphics Editor</div>
+          <div class="subheading mb-3">Design Tools</div>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
               Affinity Designer <br />
-              (compatible with Adobe Illustrator)
+              (Adobe Illustrator alternative)
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
               Affinity Photo <br />
-              (compatible with Adobe Photoshop)
+              (Adobe Photoshop alternative)
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
               Affinity Publisher <br />
-              (compatible with Adobe InDesign)
+              (Adobe InDesign alternative)
             </li>
           </ul>
         </div>
