--- a/index.html
+++ b/index.html
@@ -148,20 +148,25 @@
               <i class="fab fa-html5"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-markdown"></i>
-            </li>
-            <li class="list-inline-item">
               <i class="fab fa-docker"></i>
             </li>
           </ul>
           <br />
-          <div class="subheading mb-3">Marketing</div>
+          <div class="subheading mb-3">Data Analysis & Marketing</div>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Emotional Branding
+              STP Analysis <br />
+              (with Python)
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Search Engine Marketing <br />
+              (SEM)
             </li>
             <li>
               <span class="fa-li">
@@ -173,14 +178,13 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              User Experience
+              Emotional Branding
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Search Engine Marketing <br />
-              (SEM)
+              User Experience
             </li>
           </ul>
           <br />
@@ -207,6 +211,12 @@
               </span>
               Affinity Publisher <br />
               (Adobe InDesign alternative)
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Figma
             </li>
           </ul>
         </div>
