--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
           </h1>
           <div class="subheading mb-5">
             An Enthusiast About <br />
-            Data-Driven Marketing
+            Data-Driven And <br />
+            User Experience
           </div>
           <p class="lead mb-5">
             
@@ -152,7 +153,7 @@
             </li>
           </ul>
           <br />
-          <div class="subheading mb-3">Data Analysis & Marketing</div>
+          <div class="subheading mb-3">Marketing / Data Analysis / UX</div>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
@@ -178,13 +179,13 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Emotional Branding
+              UX Design
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              User Experience
+              Lean UX
             </li>
           </ul>
           <br />
@@ -226,7 +227,7 @@
         <div class="resume-section-content">
           <h2 class="mb-5">Interests</h2>
           <p>
-            Besides data analysis and marketing, I’m also prone to enjoying music, fashion and tech. <br />
+            Besides marketing, data analysis and user experience, I’m also prone to enjoying music, fashion and tech. <br />
             <br />
             I’m a keen explorer of different types of music and have over 300 albums in eclectic genres. Fashion is a source of creative inspiration for me and I’m fascinated with how design shapes self expression. I’m also deeply interested in tech hardware and how it informs a significant part of our identity.
           </p>
