--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#knowledgeskills">Knowledge & Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -137,9 +137,9 @@
         </div>
       </section>
       <hr class="m-0" />
-      <section class="resume-section" id="skills">
+      <section class="resume-section" id="knowledgeskills">
         <div class="resume-section-content">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5">Knowledge & Skills</h2>
           <div class="subheading mb-3">Programming Languages & Tools</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
