--- a/index.html
+++ b/index.html
@@ -140,19 +140,6 @@
       <section class="resume-section" id="knowledgeskills">
         <div class="resume-section-content">
           <h2 class="mb-5">Knowledge & Skills</h2>
-          <div class="subheading mb-3">Programming Languages & Tools</div>
-          <ul class="list-inline dev-icons">
-            <li class="list-inline-item">
-              <i class="fab fa-python"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-docker"></i>
-            </li>
-          </ul>
-          <br />
           <div class="subheading mb-3">Marketing / Data Analysis / UX</div>
           <ul class="fa-ul mb-0">
             <li>
@@ -218,6 +205,20 @@
                 <i class="far fa-circle"></i>
               </span>
               Figma
+            </li>
+          </ul>
+          <br />
+          <br />
+          <div class="subheading mb-3">Programming Languages / Tools</div>
+          <ul class="list-inline dev-icons">
+            <li class="list-inline-item">
+              <i class="fab fa-python"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-html5"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-docker"></i>
             </li>
           </ul>
         </div>
