--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             I<span class="text-primary">'</span>m
           </h1>
           <div class="subheading mb-5">
-            An Enthusiast About <br />
+            An <br />
+            Enthusiast About <br />
             Data-Driven And <br />
             User Experience
           </div>
           <p class="lead mb-5">
-            
           </p>
         </div>
       </section>
