--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#knowledgeskills">Knowledge & Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#abilitiesskills">Abilities & Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -130,10 +130,10 @@
         </div>
       </section>
       <hr class="m-0" />
-      <section class="resume-section" id="knowledgeskills">
+      <section class="resume-section" id="abilitiesskills">
         <div class="resume-section-content">
-          <h2 class="mb-5">Knowledge & Skills</h2>
-          <div class="subheading mb-3">Marketing / Data Analysis / UX</div>
+          <h2 class="mb-5">Abilities & Skills</h2>
+          <div class="subheading mb-3">Abilities</div>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
@@ -161,16 +161,10 @@
               </span>
               UX Design
             </li>
-            <li>
-              <span class="fa-li">
-                <i class="far fa-circle"></i>
-              </span>
-              Lean UX
-            </li>
           </ul>
           <br />
           <br />
-          <div class="subheading mb-3">Design Tools</div>
+          <div class="subheading mb-3">Skills</div>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
