--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#abilitiesskills">Abilities & Skills</a>
           </li>
           <li class="nav-item">
@@ -38,6 +32,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolios">Portfolios</a>
@@ -56,76 +56,6 @@
             Enthusiast About <br />
             Data-Driven And <br />
             User Experience
-          </div>
-        </div>
-      </section>
-      <hr class="m-0" />
-      <section class="resume-section" id="experience">
-        <div class="resume-section-content">
-          <h2 class="mb-5">Experience</h2>
-          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Assistant</h3>
-              <div class="subheading mb-3">La-Fu Co., Ltd.</div>
-              <p>
-                • Assisted business growth. <br />
-                • Created leaflets and posters for marketing campaign. <br />
-                • Operated Google Ads.
-              </p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">July 2014 - February 2015</span>
-            </div>
-          </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Deputy Account Manager</h3>
-              <div class="subheading mb-3">Jung-Shin Assets Management Co., Ltd.</div>
-              <p>
-                • Cold call and interacted with clients. <br />
-                • Collected and analysed client properties, including salary, real estate, etc. <br />
-                • Executed process of civil lawsuit and judicial attachment.
-              </p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">March 2006 - July 2010</span>
-            </div>
-          </div>
-        </div>
-      </section>
-      <hr class="m-0" />
-      <section class="resume-section" id="education">
-        <div class="resume-section-content">
-          <h2 class="mb-5">Education</h2>
-          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Associate of Applied Foreign Languages</h3>
-              <div class="subheading mb-3">Kao-Yuan University</div>
-              <p>English & Business</p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">September 2000 - June 2003</span>
-            </div>
-          </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Electronic Engineering</h3>
-              <div class="subheading mb-3">Kao-Yuan Vocational High School</div>
-              <p>Electronics & Computer Science</p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">September 1997 - June 1999</span>
-            </div>
-          </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Data Processing</h3>
-              <div class="subheading mb-3">Hai-Cing Vocational High School</div>
-              <p>Statistics & Computer Operation</p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">September 1996 - June 1997</span>
-            </div>
           </div>
         </div>
       </section>
@@ -246,6 +176,66 @@
               course programme in Fashion Business
             </li>
           </ul>
+        </div>
+      </section>
+      <hr class="m-0" />
+      <section class="resume-section" id="experience">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Experience</h2>
+          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+              <h3 class="mb-0">Assistant</h3>
+              <div class="subheading mb-3">La-Fu Co., Ltd.</div>
+              <p>
+                • Assisted business growth. <br />
+                • Created leaflets and posters for marketing campaign. <br />
+                • Operated Google Ads.
+              </p>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">July 2014 - February 2015</span>
+            </div>
+          </div>
+          <div class="d-flex flex-column flex-md-row justify-content-between">
+            <div class="flex-grow-1">
+              <h3 class="mb-0">Deputy Account Manager</h3>
+              <div class="subheading mb-3">Jung-Shin Assets Management Co., Ltd.</div>
+              <p>
+                • Cold call and interacted with clients. <br />
+                • Collect and analyse client properties, including salary, real estate, etc. <br />
+                • Executed process of civil lawsuit and judicial attachment.
+              </p>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">March 2006 - July 2010</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+      <section class="resume-section" id="education">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Education</h2>
+          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+              <h3 class="mb-0">Associate of Applied Foreign Languages</h3>
+              <div class="subheading mb-3">Kao-Yuan University</div>
+              <p>English & Business</p>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">September 2000 - June 2003</span>
+            </div>
+          </div>
+          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+              <h3 class="mb-0">Electronic Engineering</h3>
+              <div class="subheading mb-3">Kao-Yuan Vocational High School</div>
+              <p>Electronics & Computer Science</p>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">September 1997 - June 1999</span>
+            </div>
+          </div>
         </div>
       </section>
       <hr class="m-0" />
