--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Behavioral Economics
+              Behavioral Economics <br />
+              (to improve business)
             </li>
             <li>
               <span class="fa-li">
@@ -133,6 +134,9 @@
             </li>
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-css3-alt"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-docker"></i>
