--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#abilitiesskills">Abilities & Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#profile">profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -52,39 +49,76 @@
             I<span class="text-primary">'</span>m
           </h1>
           <div class="subheading mb-3">
-            An <br />
-            Enthusiast About <br />
-            Data-Driven And <br />
-            User Experience
+            an <br />
+            enthusiast about <br />
+            Data Analysis & <br />
+            Human Behavior
           </div>
         </div>
       </section>
       <hr class="m-0" />
-      <section class="resume-section" id="abilitiesskills">
+      <section class="resume-section" id="profile">
         <div class="resume-section-content">
-          <h2 class="mb-5">Abilities & Skills</h2>
-          <div class="subheading mb-3">Abilities</div>
+          <h2 class="mb-5">Profile</h2>
+          <p>
+            In the process of assisting a friend to launch a business, I came into contact with marketing and Google Ads. This experience gave me a strong interest in and enthusiasm for marketing strategies, data analysis and UX design. I began to learn various marketing techniques and data analysis skills, including marketing methods that engage the unconscious mind through behavioral science and consumer psychology. <br />
+            <br />
+            I have combined this study of influencing consumer decisions with research into designing products and services that provide excellent user experiences. These insights into interactive experiences between users and products or services enable me to formulate strategies to powerfully influence consumer decisions. To better collect and analyse data to inform market research, I have also learned the Python programming language.
+          </p>
+        </div>
+      </section>
+      <hr class="m-0" />
+      <section class="resume-section" id="skills">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Skills</h2>
+          <div class="subheading mb-3">Soft Skills</div>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              STP Analysis <br />
-              (with Python)
+              Teamwork
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Search Engine Marketing <br />
-              (SEM)
+              Communication
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Behavioral Economics <br />
-              (to improve business)
+              Problem Solving
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Ability to Work Under Pressure
+            </li>
+          </ul>
+          <br />
+          <br />
+          <div class="subheading mb-3">Hard Skills</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              STP Analysis with Python
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Search Engine Marketing
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Behavioral Economics
             </li>
             <li>
               <span class="fa-li">
@@ -95,28 +129,25 @@
           </ul>
           <br />
           <br />
-          <div class="subheading mb-3">Skills</div>
+          <div class="subheading mb-3">Design Tools</div>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Affinity Designer <br />
-              (Adobe Illustrator alternative)
+              Affinity Designer
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Affinity Photo <br />
-              (Adobe Photoshop alternative)
+              Affinity Photo
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Affinity Publisher <br />
-              (Adobe InDesign alternative)
+              Affinity Publisher
             </li>
             <li>
               <span class="fa-li">
@@ -140,44 +171,6 @@
             </li>
             <li class="list-inline-item">
               <i class="fab fa-docker"></i>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <hr class="m-0" />
-      <section class="resume-section" id="interests">
-        <div class="resume-section-content">
-          <h2 class="mb-5">Interests</h2>
-          <p>
-            Besides marketing, data analysis and user experience, I’m also prone to enjoying music, fashion and tech. <br />
-            <br />
-            I’m a keen explorer of different types of music and have over 300 albums in eclectic genres. Fashion is a source of creative inspiration for me and I’m fascinated with how design shapes self expression. I’m also deeply interested in tech hardware and how it informs a significant part of our identity.
-          </p>
-        </div>
-      </section>
-      <hr class="m-0" />
-      <section class="resume-section" id="certifications">
-        <div class="resume-section-content">
-          <h2 class="mb-5">Certifications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <span class="fa-li">
-                <i class="fas fa-check"></i>
-              </span>
-              Google Ads certification
-            </li>
-            <li>
-              <span class="fa-li">
-                <i class="fas fa-check"></i>
-              </span>
-              Google Analytics certification
-            </li>
-            <li>
-              <span class="fa-li">
-                <i class="fas fa-check"></i>
-              </span>
-              University of Arts London <br />
-              course programme in Fashion Business
             </li>
           </ul>
         </div>
@@ -222,9 +215,19 @@
           <h2 class="mb-5">Education</h2>
           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
+              <h3 class="mb-0">LCF course programme in Fashion Business</h3>
+              <div class="subheading mb-3">University of Arts London</div>
+              <p></p>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">August 2010 - September 2010</span>
+            </div>
+          </div>
+          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
               <h3 class="mb-0">Associate of Applied Foreign Languages</h3>
               <div class="subheading mb-3">Kao-Yuan University</div>
-              <p>English & Business</p>
+              <p></p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">September 2000 - June 2003</span>
@@ -234,7 +237,7 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Electronic Engineering</h3>
               <div class="subheading mb-3">Kao-Yuan Vocational High School</div>
-              <p>Electronics & Computer Science</p>
+              <p></p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">September 1997 - June 1999</span>
