--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#aboutme">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#profile">profile</a>
+            <a class="nav-link js-scroll-trigger" href="#profile">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
@@ -43,7 +43,7 @@
       </div>
     </nav>
     <div class="container-fluid p-0">
-      <section class="resume-section" id="about">
+      <section class="resume-section" id="aboutme">
         <div class="resume-section-content">
           <h1 class="mb-0">
             I<span class="text-primary">'</span>m
